adding to branch

--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bcaa21e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2ffbbe28",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "39a15c07",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +793,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7df218b9",
    "metadata": {},
    "source": [
     "## MODELING"
@@ -805,7 +801,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a13c3a82",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +842,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e55335ec-ab69-4d4a-9ed2-18ef72d14019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +852,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3fea6ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +922,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "956befb3",
    "metadata": {},
    "source": [
     "# Potentially add for loop to insert the winner to next round (The names have to be in full names in score predicor) and add the seeding"
@@ -937,161 +929,149 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607130da",
    "metadata": {},
    "source": [
-    "### NFC Playoff Round 1 "
+    "### NFC Playoff Picture\n",
+    "\n",
+    "1. Green Bay Packers (13-4), champions, NFC North. The Packers clinched the No. 1 seed, the lone bye and the Lambeau home-field advantage in the NFC playoffs with their win over the Vikings in Week 17, matching their win total of the previous two seasons with Aaron Rodgers under Matt LaFleur with one more game left in the new schedule. They lost in Week 18 while resting Rodgers and other regulars in the second half against the Lions.\n",
+    "\n",
+    "2. Tampa Bay Buccaneers (13-4), champions, NFC South. The Buccaneers beat the Panthers and moved up to No. 2 because the Rams, to whom they lost in Week 3, lost to the 49ers. They finished behind the Packers because of a lesser confference record and ahead of the Cowboys, up a full game and a head-to-head tiebreaker from Week 1.\n",
+    "\n",
+    "3. Dallas Cowboys (12-5), champions, NFC East. The Cowboys rebounded to rout the resting Eagles in Week 18 after they lost to the Cardinals in a failed comeback in Week 17. They were able to jump the losing Rams because of winning the conference-record tiebreaker over them.\n",
+    "\n",
+    "4. Los Angeles Rams (12-5), champions, NFC West. The Rams failed to beat the 49ers in Week 18 but still took back the division crown with the Cardinals losing another West matchup to the Seahawks at home. They cost themselves a No. 2 seed and now need to play a third game against the Cardinals.\n",
+    "\n",
+    "5. Arizona Cardinals (11-6), second place, NFC West. The Cardinals could have won the division with the Rams losing but they also lost to the Seahawks. They will settle for the top wild-card spot and a rematch with the Rams in the wild-card playoffs.\n",
+    "\n",
+    "6. San Francisco 49ers (10-7), third place, NFC West. The 49ers locked down the second wild card by beating the Rams in overtime in Week 18. They held off the winning Saints and got up a full game on the losing Eagles, whom they also beat in Week 2.\n",
+    "\n",
+    "7. Philadelphia Eagles (9-8), second place, NFC East. The Eagles rested players against the Cowboys in Week 18 after they had already clinched a wild-card spot in Week 17. They stayed ahead of the winning Saints because of beating that team in Week 11."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0ea06fef",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Philadelphia Eagles will score 27.7\n",
-      "Tampa Bay Buccaneers will score 26.9\n",
-      "Philadelphia Eagles are the WINNERS!!!\n"
-     ]
-    }
-   ],
    "source": [
-    "scores, winner = Score_Predictor('Philadelphia Eagles', 'Tampa Bay Buccaneers')"
+    "### AFC Playoff Picture\n",
+    "\n",
+    "1. Tennessee Titans (12-5), champions, AFC South. The Titans held on against the Texans in Week 18 to stay ahead of the Chiefs and clinch the No. 1 seed. They have home-field advantage in the AFC playoffs and the lone bye. The conference road to Super Bowl 56 will go through Nashviille.\n",
+    "\n",
+    "2. Kansas City Chiefs (12-5), champions, AFC West. The Chiefs will settle for the No. 2 seed after beating the Broncos in Week 18 because they lost head-to-head to the Titans in Week 7. They did win Super Bowl 54 coming from this position behind the Ravens.\n",
+    "\n",
+    "3. Buffalo Bills (11-6), champions, AFC East. The Bills won the division and kept this seed with a home win over the Jets. They finish a game behind the co-AFC leaders and a game ahead of the Bengals after being the AFC's No. 2 in last year's playoffs.\n",
+    "\n",
+    "4. Cincinnati Bengals (10-7), champions, AFC North. The Bengals rested key players because of injuries and other reasons and lost without Joe Burrow and Joe Mixon at the Browns in Week 18. They were set to stay here behind the East champions.\n",
+    "\n",
+    "5. Las Vegas Raiders (10-7), second place, AFC West. The Raiders moved into playoff position with the Colts, whom they beat in Week 17, being upset by the Jaguars in Week 18. They earned a playoff berth with the wild overtime win over the Chargers on Sunday night.\n",
+    "\n",
+    "6. New England Patriots (10-7), second place, AFC East. The Patriots lost to the Dolphins in Week 18, but they had already lost the East title when the Bills beat the Jets. They dropped to No. 6 with the Raiders beating the Chargers on Sunday night because of losing the tiebreaker.\n",
+    "\n",
+    "7. Pittsburgh Steelers (9-7-1), second place, AFC North. The Steelers got into the playoffs to extend the career of Ben Roethlisberger by beating the Ravens in Week 18 while the Jaguars beat the Colts and the Raiders beat the Chargers.\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b22f1f34",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "San Francisco 49ers will score 15.5\n",
-      "Dallas Cowboys will score 15.1\n",
-      "San Francisco 49ers are the WINNERS!!!\n"
-     ]
-    }
-   ],
    "source": [
-    "scores, winner = Score_Predictor('San Francisco 49ers', 'Dallas Cowboys')"
+    "### NFC Playoff Wildcard Round "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5259e617",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Arizona Cardinals will score 15.6\n",
-      "Los Angeles Rams will score 15.3\n",
-      "Arizona Cardinals are the WINNERS!!!\n"
+      "Tampa Bay Buccaneers will score 32.0\n",
+      "Philadelphia Eagles will score 26.0\n",
+      "Tampa Bay Buccaneers are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Arizona Cardinals', 'Los Angeles Rams')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5896016",
-   "metadata": {},
-   "source": [
-    "### AFC Playoff Round 1 "
+    "scores, winner = Score_Predictor('Tampa Bay Buccaneers','Philadelphia Eagles')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d65bca36",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pittsburgh Steelers will score 15.1\n",
-      "Kansas City Chiefs will score 15.4\n",
-      "Kansas City Chiefs are the WINNERS!!!\n"
+      "Dallas Cowboys will score 29.7\n",
+      "San Francisco 49ers will score 29.6\n",
+      "Dallas Cowboys are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Pittsburgh Steelers', 'Kansas City Chiefs')"
+    "scores, winner = Score_Predictor('Dallas Cowboys', 'San Francisco 49ers')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b435d2a6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Las Vegas Raiders will score 15.4\n",
-      "Cincinnati Bengals will score 15.4\n",
-      "Las Vegas Raiders are the WINNERS!!!\n"
+      "Los Angeles Rams will score 21.8\n",
+      "Arizona Cardinals will score 28.6\n",
+      "Arizona Cardinals are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Las Vegas Raiders', 'Cincinnati Bengals')"
+    "scores, winner = Score_Predictor('Los Angeles Rams', 'Arizona Cardinals')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AFC Playoff Wildcard Round "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "208aad61",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Kansas City Chiefs will score 28.8\n",
+      "Pittsburgh Steelers will score 13.5\n",
+      "Kansas City Chiefs are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b6c0c12",
-   "metadata": {},
-   "source": [
-    "### NFC Playoff Round 2"
+    "scores, winner = Score_Predictor('Kansas City Chiefs', 'Pittsburgh Steelers')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f6b81e11",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Buffalo Bills will score 17.4\n",
+      "New England Patriots will score 31.8\n",
+      "New England Patriots are the WINNERS!!!\n"
      ]
     }
    ],
@@ -1102,159 +1082,194 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9d20ff31",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Cincinnati Bengals will score 26.1\n",
+      "Las Vegas Raiders will score 27.0\n",
+      "Las Vegas Raiders are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+    "scores, winner = Score_Predictor('Cincinnati Bengals', 'Las Vegas Raiders')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8742deb8",
    "metadata": {},
    "source": [
-    "### NFC Playoff Round 2"
+    "### NFC Playoff Divisional Round"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "49b778ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Green Bay Packers will score 24.0\n",
+      "Arizona Cardinals will score 23.4\n",
+      "Green Bay Packers are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+    "scores, winner = Score_Predictor('Green Bay Packers', 'Arizona Cardinals')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d01c2531",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Tampa Bay Buccaneers will score 28.6\n",
+      "Dallas Cowboys will score 22.1\n",
+      "Tampa Bay Buccaneers are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+    "scores, winner = Score_Predictor('Tampa Bay Buccaneers', 'Dallas Cowboys')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19c648af",
    "metadata": {},
    "source": [
-    "### NFC Championship"
+    "### AFC Playoff Divisional Round"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "beb4be96",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Tennessee Titans will score 16.3\n",
+      "New England Patriots will score 34.3\n",
+      "New England Patriots are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c76b4f42",
-   "metadata": {},
-   "source": [
-    "### AFC Championship"
+    "scores, winner = Score_Predictor('Tennessee Titans', 'New England Patriots')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5459b500",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Kansas City Chiefs will score 28.1\n",
+      "Las Vegas Raiders will score 17.1\n",
+      "Kansas City Chiefs are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+    "scores, winner = Score_Predictor('Kansas City Chiefs', 'Las Vegas Raiders')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a8feef18",
    "metadata": {},
    "source": [
-    "### Suberbowl"
+    "### NFC Conference Championship"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5ef2a7e9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Tampa Bay Buccaneers will score 24.9\n",
+      "Arizona Cardinals will score 21.5\n",
+      "Tampa Bay Buccaneers are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "scores, winner = Score_Predictor('Buffalo Bills', 'New England Patriots')"
+    "scores, winner = Score_Predictor('Tampa Bay Buccaneers', 'Arizona Cardinals')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AFC Conference Championship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tennessee Titans will score 17.5\n",
+      "Kansas City Chiefs will score 30.9\n",
+      "Kansas City Chiefs are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Tennessee Titans', 'Kansas City Chiefs')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Suber Bowl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kansas City Chiefs will score 21.9\n",
+      "Arizona Cardinals will score 19.6\n",
+      "Kansas City Chiefs are the WINNERS!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores, winner = Score_Predictor('Kansas City Chiefs', 'Arizona Cardinals')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
