--- a/Super_model.ipynb
+++ b/Super_model.ipynb
@@ -994,7 +994,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
