updated stephane_Dashboard with model selection

--- a/Testing_notebook.ipynb
+++ b/Testing_notebook.ipynb
@@ -551,6 +551,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9f75d07-f2c7-4946-92d3-8f077333d527",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "153bf6b4-6658-43a4-81ac-ff1af3ece02d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64e03377-e109-4898-b797-b372d04501bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e9ef89b-c952-474f-8815-3b93450c5571",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "95c77ab3-9554-45d0-b6b8-143ebb9c4071",
    "metadata": {},
    "outputs": [],
@@ -1161,7 +1193,17 @@
    "id": "794beded-4d67-47b4-a6a1-e2cb9444f33b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# all but LR\n",
+    "importance = GB_model.feature_importances_\n",
+    "\n",
+    "feature_names = gb_model_data.drop('TmScore', axis=1).columns\n",
+    "\n",
+    "d = {'Var_Name': feature_names, 'Imp': importance}\n",
+    "df = pd.DataFrame(data=d)\n",
+    "df = df.sort_values(by= ['Imp'], ascending = False).reset_index(drop=True)\n",
+    "df.head(15)\n"
+   ]
   }
  ],
  "metadata": {
