--- a/Datacleaning.ipynb
+++ b/Datacleaning.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff2cf077-0fa5-482d-a168-00332776c7fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cfa7ff7-b0bb-497c-8715-c916a0fbcafd",
    "metadata": {},
    "source": [
     "## Create Training Set"
@@ -27,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e94d837d-19bb-4d5a-b49d-f6e7b18d86f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a024163a-d454-4831-99d0-813238094964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +97,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b8158b73-6860-40fa-a099-fa6f1590f21d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "49cb9062-9ee0-4035-9b77-dd39b3e4ab24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c9769172-9ea8-496f-93f4-c4135d820b49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +133,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5d787eb4-c1e7-4fa2-afad-6810238a8aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3746bf2d-44ee-4e02-9644-ede875f429dd",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "20ce296d-6764-468e-8da1-7b9dca174562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "96b339ff-95e3-460a-a5cb-66bf6b4baedd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +424,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ae205cbd-ae68-45ac-89e2-0837990f96f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +438,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f676063d-44f0-426b-ba47-49bc537e7cd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +448,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3def5a33-32ad-4e49-81d6-9b5ae17e0d41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +461,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ee28afc3-b005-43c6-8c6d-52afe9165636",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +677,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e376b098-61a8-429c-ab6b-5c770cc7c5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +687,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1e0cb4c8-4c0f-4bb5-8a11-0991993c2bcb",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +903,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "741e299a-05d5-4ac4-992c-54cc7108f668",
    "metadata": {},
    "source": [
     "## Create Test Set"
@@ -929,7 +911,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7cad8516-83be-427b-a8b2-42449d121ac4",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1394,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "67127d8e-5104-4b49-bf4d-264847bfee12",
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1878,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e6a7e26c-8e8e-420a-92af-bb7d8074b58b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1887,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "72d18f64-0bb1-4c7d-89a7-a5242a6cc5f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1920,7 +1898,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9a69786a-925a-4ffb-a8ef-11816e21a2dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +1921,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c0523202-da73-4afb-939b-60b620b8337b",
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2385,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9085c63a-913e-4562-9d85-e46874259458",
    "metadata": {
     "tags": []
    },
@@ -2420,7 +2395,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8babc4eb-7020-47de-a847-922ec27ded38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,7 +2404,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f62a823f-87b3-4741-b830-534ee996030f",
    "metadata": {
     "tags": []
    },
@@ -2443,7 +2416,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b6087a18-cc69-47c0-9173-eaff1261e95d",
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2556,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a130a940-4d38-4d17-85c0-2e2dee2de24b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2594,7 +2565,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1c70f866-d992-48eb-a149-5413aba381a9",
    "metadata": {},
    "outputs": [
     {
@@ -2675,7 +2645,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c887ed14-6144-4c47-9c62-989e4e431d2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2687,7 +2656,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a25df26a-747b-4b20-8116-754b37f70be5",
    "metadata": {},
    "outputs": [
     {
@@ -3175,7 +3143,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "db3015ff-6fe7-418a-ab0a-b740e4682cd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3185,7 +3152,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "27e24287-2821-4639-bca8-d5f182a71085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3198,7 +3164,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "23044f9c-3bda-4fa6-914b-04a0228ade0e",
    "metadata": {},
    "outputs": [
     {
@@ -3220,7 +3185,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2ecc7742-4030-4495-9fd0-c1e5ad082502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3229,7 +3193,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b2c824-b0a7-4661-bc08-abd593ed63d3",
    "metadata": {},
    "source": [
     "### Modeling"
@@ -3238,7 +3201,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "027522ec-1eeb-43ab-a80d-7e94d68a55c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3252,7 +3214,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "28ef9deb-3694-4c7f-98af-f5be884014f5",
    "metadata": {},
    "outputs": [
     {
@@ -3291,7 +3252,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "76d4a8cb-f479-4e6b-8994-6ff9b087d895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3303,7 +3263,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "7b683502-950d-41e4-9648-49449e180335",
    "metadata": {},
    "outputs": [
     {
@@ -3337,7 +3296,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "055e7177-ebb4-46d1-8d78-8fc0b64f5e9c",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -3346,7 +3304,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "34adf7f1-e097-4d55-bf2c-86afa792d9b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3358,7 +3315,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1841f42e-3819-44b0-b472-38e6f8f30414",
    "metadata": {},
    "outputs": [
     {
@@ -3380,7 +3336,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "53eac264-6ebf-4cbd-b227-3a3de616ca34",
    "metadata": {},
    "outputs": [
     {
@@ -3403,7 +3358,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "791745e2-4f09-4660-adf8-48caa013be9f",
    "metadata": {},
    "outputs": [
     {
@@ -3422,7 +3376,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d0c59e3e-5cd6-4f09-82a2-6a23529a6052",
    "metadata": {},
    "outputs": [
     {
@@ -3638,7 +3591,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6a6e7e1a-acfd-4269-9989-1e351c78bdbd",
    "metadata": {},
    "outputs": [
     {
@@ -3881,7 +3833,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e9e70f69-7d2e-4242-b19e-fffe36cded0c",
    "metadata": {},
    "outputs": [
     {
@@ -3935,7 +3886,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "0f33c271-bf0e-4881-aa92-a90c72406c00",
    "metadata": {},
    "outputs": [
     {
@@ -4244,7 +4194,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d63868cc-4acf-427f-9f5a-7f93cd3fa85e",
    "metadata": {},
    "outputs": [
     {
@@ -4588,7 +4537,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b4b1453d-0668-4b56-9604-10283af5b770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4597,7 +4545,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f552bc-c5b0-4cc1-afdb-d4adbc5cad36",
    "metadata": {},
    "source": [
     "## ADABOOST"
@@ -4606,7 +4553,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e745cc21-ffc7-4418-bbbf-1f1c9a58bb0a",
    "metadata": {},
    "outputs": [
     {
@@ -4639,7 +4585,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "c737baa8-8808-4ae2-a77b-6424f682359f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4657,7 +4602,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "85370212-9723-4890-a226-b9f57e7670ce",
    "metadata": {},
    "outputs": [
     {
@@ -4712,7 +4656,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "be9dcc64-655d-44b7-b6a8-ff2f6c051f25",
    "metadata": {},
    "outputs": [
     {
@@ -5055,7 +4998,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "addfcc5d-66c1-4625-af89-93242dfddf81",
    "metadata": {},
    "outputs": [
     {
@@ -5073,7 +5015,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "078bca1a-8858-475e-b6e9-9373ebd009c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5082,7 +5023,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a31b46-f1e5-454b-9284-4ba19f0b71f1",
    "metadata": {},
    "source": [
     "### PCA Testing"
@@ -5091,7 +5031,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "18bee543-79af-4f79-aa47-28dad0ee77ba",
    "metadata": {},
    "outputs": [
     {
@@ -6592,7 +6531,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03550c1b-009f-420c-b630-94f9e4815cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6608,7 +6546,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2796385a-3602-4ea5-92b0-855e517cb36a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6619,7 +6556,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14598b6a-0361-4400-a51e-4e6b6ed981b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6630,7 +6566,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "002bcddb-d7b9-49f4-82c8-b5db2aa506e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6646,7 +6581,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebcc4e0-197d-4d8a-9203-2ad385d3d4d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6657,7 +6591,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115a213b-6131-4ccb-a113-70b9bc115a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6680,7 +6613,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d1d766f-15b0-4681-9c63-4fe7cfb5630b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6690,7 +6622,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6f8d70-1178-4f5f-8316-b3d994e85f26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6701,7 +6632,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf88aa8-32d8-4368-a094-f96f4f4c4144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6712,7 +6642,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed42582-4339-436f-baee-351fa327b892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6730,7 +6659,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564e0ba2-d86c-47f8-bbc8-e0adaa3307aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6746,7 +6674,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "486dd02c-9af1-4518-ad72-1f6e5fd520b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6758,7 +6685,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0308a630-f25b-4367-b0c7-aeda6706918c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6769,7 +6695,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db806836-7c4b-4804-9c78-1727151ab6d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6780,7 +6705,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "341e831f-0cca-4836-a4c2-ed4a79e2bdf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6794,7 +6718,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae01cd94-446e-4984-85e1-206b0b1cfd9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6805,7 +6728,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f1eb25-a932-4239-929b-e3771f7d6770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6826,7 +6748,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "587085fd-372a-4bca-9495-7afc8319c43b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6837,7 +6758,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37950a5c-6803-4f80-b76c-80cdb9696ddb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6852,7 +6772,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1609584-fc90-4448-949c-ebe7b978bfdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6864,7 +6783,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25b25aef-ae0b-41f7-85f3-85f6f5777ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6887,7 +6805,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1a69693-2be1-4120-baa6-4f7c11b536a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6895,7 +6812,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad601eb6-ba6c-49b8-aba3-942db6bd375c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6903,7 +6819,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
