--- a/MLPRegressor.ipynb
+++ b/MLPRegressor.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "019995ee-ba65-447f-859b-0d0ed5200d67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "31d8905e",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +234,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "68eb9fb3",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +513,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3762835a",
    "metadata": {},
    "source": [
     "## Model"
@@ -525,7 +521,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "337021c8",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +563,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "05e4dee2-e03d-44e3-a34b-3addde3b4e5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +573,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ca89f9df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +642,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e0f51e87",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +660,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9862704b",
    "metadata": {},
    "source": [
     "# Potentially add for loop to insert the winner to next round (The names have to be in full names) and add the seeding"
@@ -676,7 +667,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ccfb13",
    "metadata": {},
    "source": [
     "### NFC Playoff Round 1 "
@@ -685,7 +675,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3ea20a9c",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +694,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "20ed014f",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +713,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ea7057ab",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +731,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b98b44c",
    "metadata": {},
    "source": [
     "### AFC Playoff Round 1 "
@@ -753,7 +739,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "40a0651c",
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +758,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "df94613a",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +777,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ccf8a540",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +795,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6377a477",
    "metadata": {},
    "source": [
     "### NFC Playoff Round 2"
@@ -821,7 +803,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "106a4a85",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +822,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2b00a603",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +840,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9651eaf0",
    "metadata": {},
    "source": [
     "### NFC Playoff Round 2"
@@ -869,7 +848,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1af87ba6",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +867,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5aff385e",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +885,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2625037e",
    "metadata": {},
    "source": [
     "### NFC Championship"
@@ -917,7 +893,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "61e2f7f1",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +911,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3444d41",
    "metadata": {},
    "source": [
     "### AFC Championship"
@@ -945,7 +919,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "91376c20",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +937,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b33a7ef",
    "metadata": {},
    "source": [
     "### Suberbowl"
@@ -973,7 +945,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "21b0d11b",
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +964,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
