--- a/Teamcsv.ipynb
+++ b/Teamcsv.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b16ab38a-3d4e-45b1-8467-65a76a1226d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7b7dcc9f-55ec-4a33-9af1-32782719eee9",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +239,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1cabae98-cee7-455a-bffe-e23f26068f40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +261,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9311f295-b243-4e9e-b288-63242070f433",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +790,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "20c00875-73c7-4c28-aa36-1d9d137ab4a3",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1311,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "95c19847-9ba5-4de3-a64d-c5c0d85bf393",
    "metadata": {},
    "outputs": [
     {
@@ -1691,7 +1685,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f412401d-25a6-4db7-8ff8-51a1998d6499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1694,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "442ca1e0-a506-4c2c-bb2e-8cea06733bf9",
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1904,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b6c754c0-46b0-4893-a4f9-db07a49c5396",
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2115,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "23d97c60-9b2c-49ac-a374-f661966b3b0d",
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2213,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9c73169f-2ef5-4eeb-8c5b-94ac560f6680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2234,7 +2223,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "15773782-24f9-4a0f-ae14-2b4c4fba3500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2245,7 +2233,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e411d573-5dbe-4b46-9452-e70d8993fe17",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2253,7 +2240,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bf7cb81a-ab30-4008-81ea-848bab2c796d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2263,7 +2249,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f432d65d-a680-4320-a198-879d974495ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,7 +2258,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "30d0fc39-2c16-4def-9b38-ec5a2c28e7b4",
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2390,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ffd41ff-b50e-43af-b8a0-86142d6b9717",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2414,7 +2397,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c6dcdd6-21c9-4026-bd1b-2f1515f717ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2422,7 +2404,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7e42e2a1-906c-4931-b9c5-30765cd14f43",
    "metadata": {},
    "outputs": [
     {
@@ -3043,7 +3024,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75769764-9a57-41b4-8afe-f4dfe92a13bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3051,7 +3031,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf5db006-6497-4662-b478-f093f76dd364",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3059,7 +3038,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3b34ec95-9825-4528-90f1-419ccabf5f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3069,7 +3047,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28807887-099f-44ac-84a8-a88ec2101858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3092,7 +3069,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef56b831-bc43-41ab-b565-4c30360a08c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3100,7 +3076,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
