--- a/Super_model.ipynb
+++ b/Super_model.ipynb
@@ -626,7 +626,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.478260869565218\n"
+      "7.956521739130435\n"
      ]
     },
     {
@@ -690,7 +690,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.5387055842069355\n"
+      "4.128767161284609\n"
      ]
     },
     {
@@ -748,13 +748,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.339175386034866\n"
+      "4.979449230271352\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "GradientBoostingRegressor(n_estimators=2000, random_state=20)"
+       "MLPRegressor(activation='identity', batch_size=30, hidden_layer_sizes=100,\n",
+       "             max_iter=5000, random_state=40, solver='lbfgs')"
       ]
      },
      "execution_count": 8,
@@ -804,7 +805,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.8475\n"
+      "3.6469565217391304\n"
      ]
     },
     {
@@ -878,7 +879,7 @@
     "\n",
     "# Create playoff test dataset from season averages\n",
     "\n",
-    "def Score_Predictor(home_team, away_team, super_model):\n",
+    "def Praedico(home_team, away_team, super_model):\n",
     "    team1 = home_team\n",
     "    team2 = away_team\n",
     "    \n",
@@ -1045,13 +1046,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kansas City Chiefs will score 27.1\n",
-      "Pittsburgh Steelers will score 14.6\n",
+      "Kansas City Chiefs will score 26.5\n",
+      "Pittsburgh Steelers will score 16.6\n",
       "Kansas City Chiefs are the WINNERS!!!\n",
-      "Buffalo Bills will score 20.7\n",
-      "New England Patriots will score 30.3\n",
+      "Buffalo Bills will score 20.1\n",
+      "New England Patriots will score 30.9\n",
       "New England Patriots are the WINNERS!!!\n",
-      "Cincinnati Bengals will score 23.8\n",
+      "Cincinnati Bengals will score 24.6\n",
       "Las Vegas Raiders will score 26.4\n",
       "Las Vegas Raiders are the WINNERS!!!\n"
      ]
@@ -1063,7 +1064,7 @@
     "while len(afc_playoff_picture) > 0:\n",
     "    first_element = afc_playoff_picture.pop(0)\n",
     "    last_element = afc_playoff_picture.pop(-1)\n",
-    "    score, team = Score_Predictor(first_element, last_element, super_model)\n",
+    "    score, team = Praedico(first_element, last_element, super_model)\n",
     "    afc_divisional.append(team)"
    ]
   },
@@ -1083,14 +1084,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tampa Bay Buccaneers will score 30.1\n",
-      "Philadelphia Eagles will score 26.2\n",
+      "Tampa Bay Buccaneers will score 28.9\n",
+      "Philadelphia Eagles will score 25.2\n",
       "Tampa Bay Buccaneers are the WINNERS!!!\n",
-      "Dallas Cowboys will score 26.6\n",
-      "San Francisco 49ers will score 28.1\n",
+      "Dallas Cowboys will score 26.9\n",
+      "San Francisco 49ers will score 28.4\n",
       "San Francisco 49ers are the WINNERS!!!\n",
       "Los Angeles Rams will score 21.5\n",
-      "Arizona Cardinals will score 26.0\n",
+      "Arizona Cardinals will score 24.9\n",
       "Arizona Cardinals are the WINNERS!!!\n"
      ]
     }
@@ -1101,7 +1102,7 @@
     "while len(nfc_playoff_picture) > 0:\n",
     "    first_element = nfc_playoff_picture.pop(0)\n",
     "    last_element = nfc_playoff_picture.pop(-1)\n",
-    "    score, team = Score_Predictor(first_element, last_element, super_model)\n",
+    "    score, team = Praedico(first_element, last_element, super_model)\n",
     "    nfc_divisional.append(team)"
    ]
   },
@@ -1190,10 +1191,10 @@
      "output_type": "stream",
      "text": [
       "Tennessee Titans will score 25.4\n",
-      "Las Vegas Raiders will score 24.7\n",
+      "Las Vegas Raiders will score 25.0\n",
       "Tennessee Titans are the WINNERS!!!\n",
-      "Kansas City Chiefs will score 26.4\n",
-      "New England Patriots will score 28.4\n",
+      "Kansas City Chiefs will score 23.0\n",
+      "New England Patriots will score 28.1\n",
       "New England Patriots are the WINNERS!!!\n"
      ]
     }
@@ -1202,7 +1203,7 @@
     "while len(afc_divisional) > 0:\n",
     "    first_element = afc_divisional.pop(0)\n",
     "    last_element = afc_divisional.pop(-1)\n",
-    "    score, team = Score_Predictor(first_element, last_element, super_model)\n",
+    "    score, team = Praedico(first_element, last_element, super_model)\n",
     "    afc_championship.append(team)"
    ]
   },
@@ -1222,11 +1223,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Green Bay Packers will score 26.7\n",
-      "Arizona Cardinals will score 24.9\n",
+      "Green Bay Packers will score 24.5\n",
+      "Arizona Cardinals will score 22.9\n",
       "Green Bay Packers are the WINNERS!!!\n",
-      "Tampa Bay Buccaneers will score 29.7\n",
-      "San Francisco 49ers will score 26.9\n",
+      "Tampa Bay Buccaneers will score 28.5\n",
+      "San Francisco 49ers will score 26.7\n",
       "Tampa Bay Buccaneers are the WINNERS!!!\n"
      ]
     }
@@ -1235,7 +1236,7 @@
     "while len(nfc_divisional) > 0:\n",
     "    first_element = nfc_divisional.pop(0)\n",
     "    last_element = nfc_divisional.pop(-1)\n",
-    "    score, team = Score_Predictor(first_element, last_element, super_model)\n",
+    "    score, team = Praedico(first_element, last_element, super_model)\n",
     "    nfc_championship.append(team)"
    ]
   },
@@ -1255,14 +1256,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tennessee Titans will score 15.4\n",
-      "New England Patriots will score 34.5\n",
+      "Tennessee Titans will score 15.8\n",
+      "New England Patriots will score 35.2\n",
       "New England Patriots are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "score, afc_team = Score_Predictor(afc_championship.pop(0), afc_championship.pop(-1), super_model)"
+    "score, afc_team = Praedico(afc_championship.pop(0), afc_championship.pop(-1), super_model)"
    ]
   },
   {
@@ -1281,14 +1282,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Green Bay Packers will score 28.3\n",
-      "Tampa Bay Buccaneers will score 27.3\n",
+      "Green Bay Packers will score 26.7\n",
+      "Tampa Bay Buccaneers will score 25.9\n",
       "Green Bay Packers are the WINNERS!!!\n"
      ]
     }
    ],
    "source": [
-    "score, nfc_team = Score_Predictor(nfc_championship.pop(0), nfc_championship.pop(-1), super_model)"
+    "score, nfc_team = Praedico(nfc_championship.pop(0), nfc_championship.pop(-1), super_model)"
    ]
   },
   {
@@ -1307,15 +1308,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Green Bay Packers will score 27.5\n",
-      "New England Patriots will score 28.5\n",
+      "Green Bay Packers will score 24.4\n",
+      "New England Patriots will score 28.1\n",
       "New England Patriots are the WINNERS!!!\n",
       "Congratulations to the New England Patriots for winning Super Bowl LVI!\n"
      ]
     }
    ],
    "source": [
-    "score, super_bowl_team = Score_Predictor(nfc_team, afc_team, super_model)\n",
+    "score, super_bowl_team = Praedico(nfc_team, afc_team, super_model)\n",
     "print(f'Congratulations to the {super_bowl_team} for winning Super Bowl LVI!')"
    ]
   },
@@ -1325,18 +1326,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor(n_estimators=2000, random_state=20)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The super_model with the lowest mean absolute error used was RandomForestRegressor(n_estimators=2000, random_state=20).\n"
+     ]
     }
    ],
    "source": [
-    "super_model"
+    "print(f'The super_model with the lowest mean absolute error used was {super_model}.')"
    ]
   },
   {
